# Book

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: main.py
src/api/dependencies/: __init__.py  auth.py  services.py
src/api/middleware/: __init__.py  exception_handler.py
src/api/v1/endpoints/: __init__.py  auth.py  authors.py  books.py  import_export.py
src/api/v1/schemas/: __init__.py  auth.py  author.py  book.py
src/core/config/: settings.py
src/core/exceptions/: __init__.py  base.py
src/core/security/: __init__.py  jwt.py
src/domain/entities/: __init__.py  author.py  book.py  user.py
src/domain/repositories/: __init__.py  author_repository.py  book_repository.py  user_repository.py
src/domain/services/: __init__.py  auth_service.py  author_service.py  book_service.py
src/infrastructure/database/: __init__.py  connection.py
src/infrastructure/repositories/: __init__.py  author_repository_impl.py  book_repository_impl.py  user_repository_impl.py
src/tests/: conftest.py  test_auth.py  test_authors.py  test_books.py  test_services.py
